Merged in feature/CAP-1158 (pull request #653)
CAP-1158 - Re-issue lost or stolen card

* Fixed more TODOs

* Fixed another TODO

* Preparing to store replacement info in our postgres

* Continuing to work on setting up the card replacement info

* Finished SQL script

* Updated test logic

* Integrated preparation of replacement details

* Fixed test bug

* Merge branch 'master' into feature/CAP-1158

* Fixed tests


Approved-by: jim.scarborough