@@ -9,6 +9,8 @@ import com.clearspend.capital.BaseCapitalTest;
 import com.clearspend.capital.TestHelper;
 import com.clearspend.capital.TestHelper.CreateBusinessRecord;
 import com.clearspend.capital.client.twilio.TwilioServiceMock;
+import com.clearspend.capital.controller.type.card.IssueCardRequest;
+import com.clearspend.capital.controller.type.card.limits.CurrencyLimit;
 import com.clearspend.capital.controller.type.user.ChangePasswordRequest;
 import com.clearspend.capital.controller.type.user.ForgotPasswordRequest;
 import com.clearspend.capital.controller.type.user.LoginRequest;
@@ -19,7 +21,6 @@ import com.clearspend.capital.data.model.enums.BusinessStatus;
 import com.clearspend.capital.data.model.enums.Currency;
 import com.clearspend.capital.data.model.enums.FundingType;
 import com.clearspend.capital.data.model.enums.UserType;
-import com.clearspend.capital.data.model.enums.card.BinType;
 import com.clearspend.capital.data.model.enums.card.CardType;
 import com.clearspend.capital.data.model.security.DefaultRoles;
 import com.clearspend.capital.service.BusinessService;
@@ -27,7 +28,8 @@ import com.clearspend.capital.service.CardService;
 import com.clearspend.capital.service.UserService;
 import com.clearspend.capital.service.UserService.CreateUpdateUserRecord;
 import io.fusionauth.domain.api.user.ChangePasswordResponse;
-import java.util.Collections;
+import java.util.Map;
+import java.util.Set;
 import javax.servlet.http.Cookie;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
@@ -194,21 +196,21 @@ public class AuthenticationControllerTest extends BaseCapitalTest {
 
     // Issuing the card registers with FA and sends an email to reset their password
     testHelper.setCurrentUser(createBusinessRecord.user());
-    cardService.issueCard(
-        BinType.DEBIT,
-        FundingType.POOLED,
-        CardType.VIRTUAL,
-        createBusinessRecord.business().getId(),
-        createBusinessRecord.allocationRecord().allocation().getId(),
-        newUser.user().getId(),
-        Currency.USD,
-        false,
-        createBusinessRecord.business().getLegalName(),
-        Collections.emptyMap(),
-        Collections.emptySet(),
-        Collections.emptySet(),
-        false,
-        newUser.user().getAddress());
+    final IssueCardRequest issueCardRequest =
+        new IssueCardRequest(
+            Set.of(),
+            createBusinessRecord.allocationRecord().allocation().getId(),
+            newUser.user().getId(),
+            Currency.USD,
+            true,
+            CurrencyLimit.ofMap(Map.of(Currency.USD, Map.of())),
+            Set.of(),
+            Set.of(),
+            false);
+    issueCardRequest.setFundingType(FundingType.POOLED);
+    issueCardRequest.setShippingAddress(
+        new com.clearspend.capital.controller.type.Address(newUser.user().getAddress()));
+    cardService.issueCard(CardType.VIRTUAL, issueCardRequest);
 
     String newPassword = twilioServiceMock.getLastUserAccountCreatedPassword();
     // check that the email arrived
